# vistas

./: .gitignore  .mcp.json  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README-zh.md  README.md  SKILL.md  pyproject.toml  瑞典移民助手-项目计划书.md
.github/workflows/: ci.yml  daily-pipeline.yml
docs/adr/: 0001-local-first-mcp-distribution.md  0002-bitemporal-rule-model.md  0003-lexical-retrieval-agent-translation.md  0004-fully-open-dataset.md
docs/research/: migrationsverket-lifos-villkor.md  migrationsverket-villkor.md
src/vistas/: __init__.py  config.py  model.py  retrieval.py  server.py  store.py  tools.py
src/vistas/pipeline/: build.py
src/vistas/sources/: common.py  migrationsverket.py  riksdagen.py
tests/: test_common_client.py  test_migrationsverket.py  test_migrationsverket_client.py  test_pipeline_build.py  test_pipeline_build_guidance.py  test_retrieval.py  test_riksdagen.py  test_riksdagen_client.py  test_riksdagen_politeness.py  test_server.py  test_tools.py  test_versioning.py
tests/eval/: qa_set.yaml  test_qa_set.py
tests/fixtures/: migrationsverket_sample.html  sfs_sample.txt
